Fix broken styles in the Invoces block. Default localisation ru -> en. Minore fix

--- a/src/front/shared/components/modals/InvoiceModal/InvoiceModal.scss
+++ b/src/front/shared/components/modals/InvoiceModal/InvoiceModal.scss
@@ -12,7 +12,7 @@
   font-size: 13px;
   position: absolute;
   padding: 5px 10px;
-  z-index: 1;
+  z-index: 2;
   right: 7px;
   bottom: -13px;
   font-family: 'Roboto Mono', monospace;
